high contrast fixes

--- a/vtr-ui/src/app/app.theme.scss
+++ b/vtr-ui/src/app/app.theme.scss
@@ -347,3 +347,4 @@ $white-on-black: "screen and (-ms-high-contrast: white-on-black)";
 $screen_dark_01: rgba(0, 0, 0, 0.01);
 $high-contrast-white-textselected:#37006E;
 $high-contrast-blue:#0007A4;
+$high-contrast-white-disabled:#600000;
